<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="160dp">

        <android.support.v4.view.ViewPager
            android:id="@+id/bookone_viewpager"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <ImageView
            android:id="@+id/bookone_header_image_iv"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_alignBottom="@id/bookone_viewpager"
            android:background="@drawable/bg_tablelist_m_off" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/bookone_left_tv"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/bookone_right_tv"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bookone_tv_linearone"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="5dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/local"
            android:gravity="center_vertical" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="10"
            android:gravity="center_vertical"
            android:text="@string/bookone_lefttwo_tv" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/arrow"
            android:gravity="center_vertical" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bookone_tv_lineartwo"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="5dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/search_street"
            android:gravity="center_vertical" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="10"
            android:gravity="center_vertical"
            android:text="@string/bookone_leftthree_tv" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/arrow"
            android:gravity="center_vertical" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="5dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/nnn_17"
            android:gravity="center_vertical" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="10"
            android:gravity="center_vertical"
            android:text="@string/bookone_leftthree_tv" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/arrow"
            android:gravity="center_vertical" />
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@android:color/darker_gray" />


    <LinearLayout
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="5dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:layout_marginLeft="15dp"
            android:gravity="center"
            android:background="@color/colorOrange"
            android:text="@string/bookone_search_tv"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:textStyle="bold"
            />

        <TextView
            android:layout_marginLeft="10dp"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:background="@drawable/nearly_hotel"
            android:gravity="center_vertical"
            android:text="@string/bookone_nearby_tv"
            android:paddingLeft="35dp"
            android:textSize="15sp"
            android:textStyle="bold"
            />
    </LinearLayout>

    <android.support.v4.view.ViewPager
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/colorGreen"
        />
</LinearLayout>